Fixed date alignment issue

--- a/_sass/quernus.scss
+++ b/_sass/quernus.scss
@@ -63,3 +63,8 @@ div.post img {
   float: left; 
   margin-right: 1em;
 }
+
+.title-block {
+  overflow: hidden;
+}
+
